# ai-native-tasks-manager

Financials Oct 2025 Ref SK/Fin_Converter/: Prompt.docx  Prompt_TR.md  README.md  agentic_fin_converter_v1.py  financial_analyzer.py  financial_data.txt  (+7 more)
PSO_final/: AGENTS.md  INSTRUCTIONS.md
PSO_histreet/v2/: AGENTS.md  add_methodology.py  analyzer.py  build_excel.py  build_workbook_v2.py  check_encoding.py  check_v2.py  debug_algolia.py  debug_pages.py  fix_encoding.py  fix_excel.py  inspect_cell.py  main.py  normalizer.py  pricing_strategy.py  pyproject.toml  reporter.py  scrape_new_platforms.py  strategy_report.py
PSO_histreet/v2/config/: lubricants.yaml
PSO_histreet/v2/db/: prices.db  store.py
PSO_histreet/v2/output/reports/: PSO_Pricing_Intelligence_Report.docx  PSO_Pricing_Strategy.csv  PSO_Pricing_Strategy.pptx  PSO_Pricing_Strategy_Report.docx  PSO_Pricing_Strategy_Workbook.xlsx  PSO_Pricing_Strategy_Workbook_fixed.xlsx  PSO_Pricing_Strategy_Workbook_v2.xlsx  PSO_Pricing_Strategy_v4.pptx  competitor_prices_extended.csv
PSO_histreet/v2/pptx_workspace/: create_pptx.js  package.json
PSO_histreet/v2/pptx_workspace/slides/: s01_cover.html  s02_agenda.html  s03_competitive.html  s04_portfolio.html  s05_frameworks.html  s06_f1_vbt.html  s07_f2_crp.html  s08_f3_ppa.html  s09_f4_waterfall.html  s10_f5_spec.html  s11_f6_geo.html  s12_f7_boi.html  s13_f8_channel.html  s14_pcmo.html  s15_deo_mco.html  s16_signals.html  s17_findings.html  s18_recommendations.html  s19_roadmap.html  s20_closing.html
PSO_histreet/v2/scrapers/: __init__.py  base.py  daraz.py
(+112 files in other folders)
