[project]
name = "pricing-intelligence"
version = "2.0.0"
requires-python = ">=3.11"
description = "Competitor pricing scraper and strategy engine — generalizable to any product category"
dependencies = [
    "playwright>=1.45",
    "pandas>=2.2",
    "numpy>=2.0",
    "pyyaml>=6.0",
    "python-docx>=1.1",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "rich>=13.0",
    "click>=8.1",
]

[project.scripts]
pricing = "main:cli"

